fixed strange white space at bottom

--- a/src/app/app.component.css
+++ b/src/app/app.component.css
@@ -4,6 +4,20 @@ div.app-container {
   overflow: hidden;
 }
 
+div.toolbar {
+  display: flex;
+  height: 2rem;
+  align-items: center;
+  justify-content: space-between;
+  background-color: rgb(25, 28, 28);
+  color: white;
+  padding: 0px 1rem;
+}
+
+div.page-container {
+  height: calc(100vh - 2rem);
+}
+
 div,
 p {
   color: white;
