--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -85,14 +85,12 @@
 .page-container {
   display: flex;
   flex-direction: column;
-  align-items: center;
-  justify-content: space-between;
   background-color: var(--dark);
   width: 100%;
-  height: calc(100vh - 2rem);
+  height: 100%;
   overflow: hidden;
-  padding: 2rem;
-  gap: 2rem;
+  padding: 1.5rem;
+  gap: 1.5rem;
 }
 
 .list-container {
